Prepare the most crucial functionalities based off which the application will be upgraded.

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,3 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+    width: 12px;
+    background-color: #333333;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #a0a0a0;
+    border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #808080;
+}
